# Payroll-System

./: CMakeLists.txt  Functions.cpp  Functions.h  Imports.hpp  main.cpp
Class/: Company.cpp  Company.h  Employee.cpp  Employee.h  EmployeeTypes.cpp  EmployeeTypes.h
